added testimonial component

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@
     --ligt-text-color: #FFF;
     --light-gray: #F8F8F8;
     --primary-color: #5BC124;
-    --secondary-color: #B2E3FF;
+    --secondary-color: #c3f7a7; /* só pra lembrar a cor #b1e993*/
 
     --ff-sans: "Montserrat", system-ui, sans-serif;
     --fw-base: 400;
