Added contact section

--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -80,6 +80,16 @@
           }
     }
 
+    .price {
+        display: flex;
+        align-items: end;
+      
+        p {
+          margin-left: 8px;
+          padding-bottom: 4px;
+        }
+      }
+
 
     @media (width >= 1280px) {
         #pricing {
